Changes from Ant 1.6.B3 to Ant 1.6
==================================

Changes that could break older environments:
--------------------------------------------

* Attempts to read input in <java> and <exec> tasks will now receive an EOF
  rather than blocking. If you run such a process and rely on it blocking, as
  it would do in Ant 1.5, you may have problem.

* Change logging level of captured standard error output from MSG_ERR to MSG_WARN.
  Previous some standard error was output as MSG_ERR and some as MSG_WARN (namely
  standard error from exec and forked jvms).

Fixed bugs:
-----------

* <xmlcatalog>s only worked when defined inside of tasks.  Bugzilla
  Report 20965.

* <xmlcatalog> Wrong file location to URL conversion in XMLCatalog.
  Bugzilla Report 23913.

Other changes:
--------------

Changes from Ant 1.6.B2 to Ant 1.6.B3
=====================================

Changes that could break older environments:
--------------------------------------------
* Changed namespace processing. The namespace uri
  of nested elements of a type or a task are now the
  same as the type or task. Previously the namespace uri
  of nested elements was ant's namespace uri. This change will affect users
  of ant 1.6b1 and ant 1.6b2.

* <csc>'s executable attribute defaults to mcs on non-Windows platforms.

Fixed bugs:
-----------
* the <java> task checks that the Main method of the class to be executed is static,
  and fails with a decent BuildException if it is not the case

* a space at the end of the Ant-Version line of the default manifest has been removed

* better debugging support for ApacheCatalogResolver
  Bugzilla Report 24070.

* better report of exceptions in the renaming of the old file in <zip update="true"/>
  and the derived classes <jar>, ...

* use of <parallel> and xmlns:prefix="antlib:package"

* user and new arguments were swapped in PropertyHelper setNew and setUser.
  Bugzilla Report 23966.

* <style/> be able to resolve entities inside stylesheets.
